--- a/HospitalManager.Client/Components/Pages/pacient/Doctors.razor
+++ b/HospitalManager.Client/Components/Pages/pacient/Doctors.razor
@@ -1,6 +1,9 @@
 ﻿@page "/doctors"
+@attribute [Authorize(Roles = "Pacient")]
 @using HospitalManager.Shared.Models
 @using System.Text.Json
+@using System.Text.Json.Serialization
+@using Microsoft.AspNetCore.Authorization
 @rendermode InteractiveServer
 
 @inject IHttpClientFactory httpClientFactory
@@ -25,18 +28,18 @@
                 <div class="d-flex align-items-center">
                     <i class="bi bi-person-circle text-primary fs-3 me-3"></i>
                     <div>
-                        <h5 class="card-title fw-bold mb-1">@doctor.Department</h5>
-                        <p class="mb-1">
-                            <i class="bi bi-person text-primary"></i>
-                            <span>@doctor.FirstName</span>
-                        </p>
+                        <h5 class="card-title fw-bold mb-1">@doctor.BirthNumber</h5>
                         <p class="mb-1">
                             <i class="bi bi-person text-primary"></i>
                             <span>@doctor.Specialization</span>
                         </p>
                         <p class="mb-1">
+                            <i class="bi bi-person text-primary"></i>
+                            <span>@doctor.Id  @*  doctor.Person.Telephone *@</span>
+                        </p>
+                        <p class="mb-1">
                             <i class="bi bi-geo-alt text-primary"></i>
-                            <span>@doctor.Phone</span>
+                            <span>@doctor.Id  @* doctor.Person.Email *@</span>
                         </p>
                         @* <p class="text-muted">Naposledny navštívené: @doctor.LastVisited.ToString("dd. MM. yyyy")</p> *@
                     </div>
@@ -47,12 +50,6 @@
             </div>
         </div>
     }
-
-
-    <div> 
-        <p>sprava @message
-            sprava @searchQuery</p>
-    </div>
 </div>
 
 @code {
@@ -70,7 +67,7 @@
     private void Search()
     {
 
-        filteredDoctors = doctors.Where(p => p.FirstName == searchQuery).ToList();
+        filteredDoctors = doctors.Where(p => p.BirthNumber == searchQuery /* p.Person.FirstName == searchQuery || p.Person.LastName == searchQuery || $"{p.Person.FirstName} {p.Person.LastName}" == searchQuery */).ToList();
 
 
         StateHasChanged();
@@ -102,7 +99,19 @@
             doctors = JsonSerializer.Deserialize<List<Doctor>>(responseString);
             filteredDoctors = doctors;
 
-            Console.WriteLine($"Fetched {doctors.Count} medicines.");
+            Console.WriteLine($"Fetched {doctors.Count} doctors.");
+
+            // Debugging výpis
+            foreach (var item in doctors)
+            {
+                Console.WriteLine($"ID: {item.Id}");
+                Console.WriteLine($"BirthNumber: {item.BirthNumber}");
+                Console.WriteLine($"Specialization: {item.Specialization}");
+                if (item.Person != null)
+                {
+                    Console.WriteLine($"Person FirstName: {item.Person.FirstName}");
+                }
+            }
         }
         catch (HttpRequestException ex)
         {
@@ -114,90 +123,98 @@
             Console.WriteLine($"Unexpected error: {ex.Message}");
         }
 
-        doctors.Add(new Doctor() 
+        doctors.Add(new Doctor()
         { 
+            Id = 15,
             BirthNumber = "12",
-            FirstName = "Ján", 
-            LastName = "Malchovský", 
             Specialization = "chirurg", 
-            Department = "Chirurgia", 
-            Phone = "+42190854563", 
-            Mail = "jan.malchovsky@gmail.com"
+ 
+                Person = new PersonDTO()
+            {
+                FirstName = "Ján",
+                LastName = "pekny"
+            }
         }
         );
 
-        doctors.Add(new Doctor()
-            {
-                BirthNumber = "13",
-                FirstName = "Michal",
-                LastName = "Pekný",
-                Specialization = "Kadiológ",
-                Department = "Chirurgia",
-                Phone = "+42190854563",
-                Mail = "michal.pekny@gmail.com"
-            }
-        );
+        // doctors.Add(new Doctor()
+        //     {
+        //         BirthNumber = "13",
+        //         FirstName = "Michal",
+        //         LastName = "Pekný",
+        //         Specialization = "Kadiológ",
+        //         //Department = "Chirurgia",
+        //         Phone = "+42190854563",
+        //         Mail = "michal.pekny@gmail.com"
+        //     }
+        // );
 
-        doctors.Add(new Doctor()
-            {
-                BirthNumber = "14",
-                FirstName = "Peter",
-                LastName = "dobry",
-                Specialization = "psychológ, psychiater",
-                Department = "Psychiatria",
-                Phone = "+42190854563",
-                Mail = "pere.dobry@gmail.com"
-            }
-        );
+        // doctors.Add(new Doctor()
+        //     {
+        //         BirthNumber = "14",
+        //         FirstName = "Peter",
+        //         LastName = "dobry",
+        //         Specialization = "psychológ, psychiater",
+        //         //Department = "Psychiatria",
+        //         Phone = "+42190854563",
+        //         Mail = "pere.dobry@gmail.com"
+        //     }
+        // );
 
-        doctors.Add(new Doctor()
-            {
-                BirthNumber = "15",
-                FirstName = "Michal",
-                LastName = "Pekný",
-                Specialization = "Kadiológ",
-                Department = "Chirurgia",
-                Phone = "+42190854563",
-                Mail = "michal.pekny@gmail.com"
-            }
-        );
+        // doctors.Add(new Doctor()
+        //     {
+        //         BirthNumber = "15",
+        //         FirstName = "Michal",
+        //         LastName = "Pekný",
+        //         Specialization = "Kadiológ",
+        //         //Department = "Chirurgia",
+        //         Phone = "+42190854563",
+        //         Mail = "michal.pekny@gmail.com"
+        //     }
+        // );
 
-        doctors.Add(new Doctor()
-            {
-                BirthNumber = "16",
-                FirstName = "Mário",
-                LastName = "Milý",
-                Specialization = "Gynekológ",
-                Department = "Ginekológia",
-                Phone = "+42190854563",
-                Mail = "mario.mily@gmail.com"
-            }
-        );
+        // doctors.Add(new Doctor()
+        //     {
+        //         BirthNumber = "16",
+        //         FirstName = "Mário",
+        //         LastName = "Milý",
+        //         Specialization = "Gynekológ",
+        //         //Department = "Ginekológia",
+        //         Phone = "+42190854563",
+        //         Mail = "mario.mily@gmail.com"
+        //     }
+        // );
 
-        doctors.Add(new Doctor()
-            {
-                BirthNumber = "17",
-                FirstName = "Martin",
-                LastName = "Dobrý",
-                Specialization = "Chirurg",
-                Department = "Neurochirurgia",
-                Phone = "+42190854563",
-                Mail = "martin.dobry@gmail.com"
-            }
-        );
+        // doctors.Add(new Doctor()
+        //     {
+        //         BirthNumber = "17",
+        //         FirstName = "Martin",
+        //         LastName = "Dobrý",
+        //         Specialization = "Chirurg",
+        //         //Department = "Neurochirurgia",
+        //         Phone = "+42190854563",
+        //         Mail = "martin.dobry@gmail.com"
+        //     }
+        // );
         filteredDoctors = doctors;
     }
 
     public class Doctor
     {
+        [JsonPropertyName("id")]
         public int Id { get; set; }
+
+        [JsonPropertyName("birthNumber")]
         public string BirthNumber { get; set; }
-        public string FirstName { get; set; }
-        public string LastName { get; set; }
+
+        [JsonPropertyName("specialization")]
         public string Specialization { get; set; }
-        public string Department { get; set; }
-        public string Phone { get; set; }
-        public string Mail { get; set; }
+
+        [JsonPropertyName("departmentId")]
+        public int DepartmentId { get; set; }
+
+
+        public PersonDTO? Person { get; set; }
     }
 }
 
