--- a/HospitalManager.Client/Components/Pages/pacient/ProfilPacienta.razor
+++ b/HospitalManager.Client/Components/Pages/pacient/ProfilPacienta.razor
@@ -1,5 +1,7 @@
 ﻿@page "/profil"
+@attribute [Authorize(Roles = "Pacient")]
 @using HospitalManager.Client.Components.Layout.Patient
+@using Microsoft.AspNetCore.Authorization
 
 <div class="container row">
 
